abs path of urls.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                       <span class="link-block">
                         <!-- <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
                         class="external-link button is-normal is-rounded is-dark"> -->
-                        <a href="static/pdfs/hmc_main_paper_cached.pdf" target="_blank"
+                        <a href="https://media.githubusercontent.com/media/SemanticDH/HMC/hoewang/static/pdfs/hmc_main_paper_cached.pdf" target="_blank"
                           class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
@@ -158,7 +158,7 @@
     <div class="hero-body">
       <video poster="" id="tree" autoplay controls muted loop height="100%">
         <!-- Your video here -->
-        <source src="static/videos/test_5.25.mp4"
+        <source src="https://media.githubusercontent.com/media/SemanticDH/HMC/hoewang/static/videos/test_5.25.mp4"
         type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
@@ -203,7 +203,7 @@
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/title_img.jpg" alt="MY ALT TEXT"/>
+        <img src="https://media.githubusercontent.com/media/SemanticDH/HMC/hoewang/static/images/title_img.jpg" alt="MY ALT TEXT"/>
         <h3 class="subtitle has-text-centered">
           <b>Fig. 1</b> Skeleton-free motion retargeting from an input source motion to the target character. 
           <b>Left:</b> Source motion is animated on a <a href="https://www.mixamo.com/#/">Mixamo</a> character, and the target character is selected in RigNet dataset. 
@@ -216,7 +216,7 @@
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/pipeline1.jpg" alt="MY ALT TEXT"/>
+        <img src="https://media.githubusercontent.com/media/SemanticDH/HMC/hoewang/static/images/pipeline1.jpg" alt="MY ALT TEXT"/>
         <h3 class="subtitle has-text-centered">
           <b>Fig. 2</b> Overview. The network takes as input the rest and pose meshes of the source character, and the rest mesh of the target character 
           (i.e., \({\mathbf {\bar V}}^{(0)}_S\), \(\mathbf V^{(0)}_S\) and \(\mathbf {\bar V}^{(0)}_T\)), and then outputs the target pose mesh. 
@@ -229,7 +229,7 @@
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/pipeline_img2.png" alt="MY ALT TEXT"/>
+        <img src="https://media.githubusercontent.com/media/SemanticDH/HMC/hoewang/static/images/pipeline_img2.png" alt="MY ALT TEXT"/>
         <h3 class="subtitle has-text-centered">
           <b>Fig. 3</b> Design of retargeting process at every resolution. Each retargeting layer contains three modules, including Pose Encoder, Pose Decoder, and Skinning Predictor. 
           Thereinto, Pose Encoder captures vertex-wise pose information (i.e., \(\mathbf E^k_S\) and \(\mathbf {\bar E}^k_S\)) of a given mesh, 
@@ -239,7 +239,7 @@
      </div>
      <div class="item">
       <!-- Your image here -->
-      <img src="static/images/exp_visual.jpg" alt="MY ALT TEXT"/>
+      <img src="https://media.githubusercontent.com/media/SemanticDH/HMC/hoewang/static/images/exp_visual.jpg" alt="MY ALT TEXT"/>
       <h3 class="subtitle has-text-centered">
         <b>Fig. 4</b> Visualization results of motion and pose retargeting. <b>Columns from left to right</b> are different pairs of characters for motion or pose retargeting.
       </h3>
