--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
               </span>
             </div>
             <div class="is-size-5 publication-authors">
-              <span class="author-block"><sup>1</sup>Tsinghua University, <sup>2</sup>Tencent AI Lab,
-                <sup>3</sup>Tencent</span>
+              <!--<span class="author-block"><sup>1</sup>Tsinghua University, <sup>2</sup>Tencent AI Lab,-->
+               <!-- <sup>3</sup>Tencent</span>-->
               <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
             </div>
 
